<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, KLoungeActivity!</string>
    <string name="app_name">K-Rounge for KHUB</string>
    <string name="app_name_ko">K-라운지</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">로그아웃</string>
    <string name="title_activity_view_group">ViewGroup</string>
    <string name="title_activity_klounge_msg">KLoungeMsg</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="input_reply_text">전송</string>
    <string name="hint_reply_text">댓글달기</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_klounge_group_member">KLoungeGroupMember</string>
    <string name="send_message">글쓰기</string>
    <string name="title_activity_wirte_message">WirteMessage</string>
    <string name="group_all">공개라운지</string>
    <string name="go_message">게시</string>
    <string name="title_activity_my_lounge">MyLounge</string>
    <string name="title_activity_personal_lounge">PersonalLounge</string>
    <string name="Delete">삭제</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_popup_message">PopupMessage</string>
    <string name="view">보기</string>
    <string name="close">닫기</string>
    <string name="blank_5">"     "</string>
    <string name="hint_group_search">그룹명 검색</string>
    <string name="tab_name_group">그룹</string>
    <string name="tab_name_klounge">그룹SNS</string>
    <string name="tab_name_mylounge">내라운지</string>
    <string name="tab_name_more">더보기</string>
    <string name="mov_file">영상</string>
    <string name="pic_file">앨범</string>
    <string name="send_button_text">전송</string>
    <string name="attach_pic">첨부사진</string>
    <string name="attach_file">첨부파일</string>
    <string name="hint_message">글을 입력해 주세요</string>
    <string name="sorry_text">죄송합니다. 네트워크 상의 문제가 발생하였습니다.</string>
    <string name="text_confirm">확인</string>
    <string name="title_move_img">move</string>
    <string name="msg_title">k-Rounge</string>
    <string name="msg_contents">목록을 가져오고 있습니다 <![CDATA[...]]></string>
    <string name="sorry_empty_list">조회된 글 목록이 없습니다.</string>
    <string name="sorry_empty_mem_list">조회된 멤버 목록이 없습니다.</string>
    <string name="text_version_num">v 0.1.1</string>
    <string name="text_version">현재버전</string>
    <string name="text_cur_version">최신버전</string>
    <string name="copyright">Copyright@KTECH.Co</string>
    <string name="refresh">새로고침</string>
    <string name="text_status_inform">상태확인</string>
    
    <string name="text_cancel">취소</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="title_activity_image_view">ImageView</string>
    <string name="action_settings">Settings</string>
    
    <string name="new_fragment">New fragment</string>
    
    <!-- File Download Activity -->
    <string name="text_go_download">파일 열기</string>
    <string name="text_start_download">다운로드</string>
    <string name="pause_download">중지</string>
    
    <!-- Write Message Activity -->
    <string name = "picker_intent_title">사진 촬영/갤러리에서 선택</string>
    <string name = "text_mov_file">동영상</string>
    <string name = "text_take_picture">촬영</string>
    <string name = "retake_picture">다시찍기</string>
    <string name = "apply_picture">첨부하기</string>
    <string name = "apply_edited_picture">적용</string>
    <string name = "make_file_error">죄송합니다. 파일 생성에 실패하였습니다. 다시 시도 해 주세요.</string>
    
    <!-- Image Intent Example-->
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    
    <!-- More Tab -->
    <string name = "license"><b><u>Open Source Licenses</u></b></string>
    <string name = "termsAndConditions"><b><u>이용 약관</u></b></string>
    <string name = "privacyPolicy"><b><u>개인정보취급방침</u></b></string>
    
    <!-- MoreTab Expandible List -->
    <string name = "previewMessage">알림 팝업에 메시지 내용의 일부를 표시합니다.</string>
    <string name = "settingSound">메시지 도착시 소리로 알려줍니다. 기기가 진동 모드인 경우에는 소리가 나지 않습니다.</string>
    <string name = "group_sns_subtext">그룹 SNS 에 게시된 글은 알림이 표시되지 않습니다.</string>
   
    <!-- Splash Activity -->
    <string name ="please_wait_splash">그룹 멤버 리스트를 받아오고 있습니다..</string>
    
	<!-- File Search -->
	<string name ="search_hint">검색어를 입력 해 주세요</string> 
    <string name="github">GitHub</string>
    <string name="github_label">카테고리 검색</string>
	<string name="empty_title">""</string>
	<string name="all_shared_text">전체</string>
	<string name="public_text">공개</string>
	<string name="group_text">그룹</string>
	<string name="private_text">개인</string>
	<string name="close_button">종료</string>
	<string name="file_search_button_text">자료 검색</string>
	<string name="comment">덧붙일 말을 입력하세요</string>
	
	<!-- File Content View -->
	<string name="download_link_text"><u>다운로드</u></string>
	<string name="attached_file_title"><b>첨부파일</b></string>
	<string name="attached_body_title"><b>본문</b></string>
	<string name="attached_keyword_title"><b>키워드</b></string>
	<string name="sorry_no_attach">첨부된 파일이 없습니다.</string>
	<string name="file_query_hint">자료 보관함 검색</string>
	<string name="share">공유하기</string>
	<string name="be_read_count">읽음</string>
	<string name="rating_title"><b>K-Rounge 별점</b></string>
	<string name="rating_button">별점 주기</string>
	<string name="rating_button_disable">참여 완료</string>
	
	<!-- Share Data Group SNS -->
	<string name="share_group_sns">그룹 SNS 공유</string>
	<string name="select_group">그룹 선택</string>
	<string name="select_group_dialog_title">공유할 그룹 선택</string>
	<string name="where_to_post">공유 할 그룹명을 선택하세요.</string>
	<string name="confirm_send_message">전송 하시겠습니까?</string>
	<string name="share_data_sending">메시지 전송중&#8230;</string>
	<string name="send_dialog_title">그룹 SNS 공유</string>
	
	<!-- Personal Lounge Fragment -->
	<string name = "lounge_of_whom"><i>님의 라운지</i></string>
	<string name = "spinner_prompt">그룹리스트</string>
	
	<!-- GCM -->
	<string name ="krounge_message">K-Rounge 메세지</string>
	<string name="popup_do_not_show_message">새로운 메시지가 있습니다.</string>
	
	<!-- Login Activity -->
	<string name="network_error">네트워크 접속에 실패하였습니다. 네트워크 재 설정 후 다시 시도하여 주십시오.</string>
	<string name="server_error">서버의 문제로 인해 접속을 할 수 없습니다. 관리자 에게 문의 해 주시기 바랍니다.</string>
	<string name="login_error">아이디와 비밀번호가 일치하지 않습니다.</string>
	
	<!-- KLounge Activity -->
	<string name="ask_user_push_permission">K-Rounge 앱에서 푸쉬 알림을 사용하도록 하시겠습니까?</string>
	<string name="give_permission">허용</string>
	<string name="text_denied">거부</string>
	
	<!-- Reply Activity -->
	<string name="loading_msg">글을 등록 중 입니다&#8230;</string>
	<string name="reply_hint">댓글을 입력 해 보세요</string>
	<string name="reply_button_text">입력</string>
	<string name="reply_empty_text">댓글 없음</string>
	<string name="reply_title">개의 댓글이 등록 되었습니다.</string>
	<string name="reply_delete">댓글 삭제</string>
	<string name="post_reply">댓글 달기</string>
	<string name="reply_delete_dialog_message">삭제 중입니다&#8230;</string>
	<string name="complete_task">글 등록이 완료 되었습니다.</string>
</resources>