<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/download_manager"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="0dp" >

    <LinearLayout
        android:id="@+id/dialog_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/download_1_icon" />

        <TextView
            android:id="@+id/download_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/layout_vertical_margin"
            android:text="@string/text_start_download"
            android:textColor="@color/thickString"
            android:textSize="24sp" />
    </LinearLayout>

    <View
        android:id="@+id/dm_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_title_bar"
        android:background="@color/file_view_seperator_line" />

    <TextView
        android:id="@+id/download_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dm_line"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:paddingTop="5dp"
        android:text="---"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/download_message"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/start_attach_download"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_weight=".5"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/popup_button_selector"
            android:text="@string/text_start_download" />

        <Button
            android:id="@+id/pause_attach_download"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_weight=".5"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/pause_download"
            android:background="@drawable/popup_button_selector"
            android:visibility="gone" />

        <Button
            android:id="@+id/go_download"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_weight=".5"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/text_go_download"
            android:background="@drawable/popup_button_selector"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_close_dialog"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="1dp"
            android:layout_weight=".5"
            android:background="@drawable/popup_cancel_button_selector"
            android:text="@string/text_cancel"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>